--- a/news-detail.html
+++ b/news-detail.html
@@ -3,20 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tin tức</title>
+    <title>Tin tức chi tiết</title>
     <!-- import favicon -->
-    <link
-      rel="icon"
-      href="./assets/images/use/favicon-dark.ico"
-      type="image/x-icon"
-      media="(prefers-color-scheme: light)"
-    />
-    <link
-      rel="icon"
-      href="./assets/images/use/favicon-light.ico"
-      type="image/x-icon"
-      media="(prefers-color-scheme: dark)"
-    />
+    <link rel="icon" type="image/x-icon" />
     <!-- meta -->
     <meta property="og:url" content="" />
     <meta property="og:type" content="website" />
@@ -28,10 +17,6 @@
     <!-- font -->
     <link rel="stylesheet" href="./assets/fonts/MabryPro/stylesheet.css" />
     <link rel="stylesheet" href="./assets/fonts/SuperDisplay/stylesheet.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/lightgallery@2.8.3/css/lightgallery-bundle.min.css"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="./assets/fonts/PhotographFont/stylesheet.css"
@@ -77,12 +62,12 @@
                 </svg>
               </div>
               <div class="value-select color-white dropdown-custom__text">
-                <span>EN</span>
+                <span>English</span>
               </div>
             </div>
             <div class="language__body dropdown-custom__menu">
               <a href="#" class="dropdown-custom__item language__item">
-                <span class="d-inline-block link-hover">VI</span>
+                <span>Tiếng Việt</span>
               </a>
             </div>
           </div>
@@ -279,119 +264,157 @@
           <img src="./assets/images/banner-gallery.png" alt="" />
         </div>
       </section>
-
-      <div class="spacing-120"></div>
-      <section class="section-desc">
-        <div class="container-fluid p-0">
-          <div class="row g-0 justify-content-center">
-            <div class="col-lg-10">
-              <div class="desc data-fade-in">
-                At Vias Van Phong, every smile, every sunset, and every shared
-                laugh becomes a treasured memory. Whether it’s a family
-                vacation, a romantic escape, or a joyful gathering with friends,
-                our resort is where moments turn into stories. Let our stunning
-                views and heartfelt hospitality be the backdrop to the memories
-                you’ll carry forever.
+      <section class="blog-detail">
+        <div class="container-fluid p-0 justify-content-center d-flex">
+          <div class="col-lg-10">
+            <div class="box">
+              <div class="box-detail">
+                <h1 class="h2-font font-heading font-light">
+                  Every good day starts off with a cappuccino, and there’s no
+                  place better to enjoy than at Vias Hotel Vung Tau.
+                </h1>
               </div>
             </div>
           </div>
         </div>
       </section>
-
-      <div class="spacing-120"></div>
-      <section class="news-list">
-        <div class="news-list__container">
-          <div class="news-item d-block">
-            <a href="" class="news-img d-block">
-              <img src="./assets/images/gallery-1.png" alt="" />
-            </a>
-            <div class="news-content">
-              <h3 class="h5-font font-heading color-secondary font-light">
-                Vias Resort Van Phong Peninsula honored with tripadvisor
-                Travelers
-              </h3>
-              <div>
-                <a
-                  href="#"
-                  class="b1-font link-hover color-secondary underline-first"
-                  >See more</a
-                >
+      <section class="news-related">
+        <div
+          class="news-related-title h3-font font-light color-secondary font-heading"
+        >
+          Related Articles
+        </div>
+        <div class="swiper swiper-news">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="news-detail-item">
+                <div class="news-item d-block">
+                  <a href="" class="news-img d-block">
+                    <img src="./assets/images/gallery-1.png" alt="" />
+                  </a>
+                  <div class="news-content">
+                    <h3 class="h5-font font-heading color-secondary font-light">
+                      Vias Resort Van Phong Peninsula honored with tripadvisor
+                      Travelers
+                    </h3>
+                    <div>
+                      <a
+                        href="#"
+                        class="b1-font link-hover color-secondary underline-first"
+                        >See more</a
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="news-item d-block">
-            <a href="" class="news-img d-block">
-              <img src="./assets/images/gallery-1.png" alt="" />
-            </a>
-            <div class="news-content">
-              <h3 class="h5-font font-heading color-secondary font-light">
-                Vias Resort Van Phong Peninsula honored with tripadvisor
-                Travelers
-              </h3>
-              <div>
-                <a
-                  href="#"
-                  class="b1-font link-hover color-secondary underline-first"
-                  >See more</a
-                >
+            <div class="swiper-slide">
+              <div class="news-detail-item">
+                <div class="news-item d-block">
+                  <a href="" class="news-img d-block">
+                    <img src="./assets/images/gallery-1.png" alt="" />
+                  </a>
+                  <div class="news-content">
+                    <h3 class="h5-font font-heading color-secondary font-light">
+                      Vias Resort Van Phong Peninsula honored with tripadvisor
+                      Travelers
+                    </h3>
+                    <div class="view">
+                      <a
+                        href="#"
+                        class="b1-font link-hover color-secondary underline-first"
+                        >See more</a
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="news-item d-block">
-            <a href="" class="news-img d-block">
-              <img src="./assets/images/gallery-1.png" alt="" />
-            </a>
-            <div class="news-content">
-              <h3 class="h5-font font-heading color-secondary font-light">
-                Vias Resort Van Phong Peninsula honored with tripadvisor
-                Travelers
-              </h3>
-              <div>
-                <a
-                  href="#"
-                  class="b1-font link-hover color-secondary underline-first"
-                  >See more</a
-                >
+            <div class="swiper-slide">
+              <div class="news-detail-item">
+                <div class="news-item d-block">
+                  <a href="" class="news-img d-block">
+                    <img src="./assets/images/gallery-1.png" alt="" />
+                  </a>
+                  <div class="news-content">
+                    <h3 class="h5-font font-heading color-secondary font-light">
+                      Vias Resort Van Phong Peninsula honored with tripadvisor
+                      Travelers
+                    </h3>
+                    <div class="view">
+                      <a
+                        href="#"
+                        class="b1-font link-hover color-secondary underline-first"
+                        >See more</a
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="news-item d-block">
-            <a href="" class="news-img d-block">
-              <img src="./assets/images/gallery-1.png" alt="" />
-            </a>
-            <div class="news-content">
-              <h3 class="h5-font font-heading color-secondary font-light">
-                Vias Resort Van Phong Peninsula honored with tripadvisor
-                Travelers
-              </h3>
-              <div>
-                <a
-                  href="#"
-                  class="b1-font link-hover color-secondary underline-first"
-                  >See more</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="news-item d-block">
-            <a href="" class="news-img d-block">
-              <img src="./assets/images/gallery-1.png" alt="" />
-            </a>
-            <div class="news-content">
-              <h3 class="h5-font font-heading color-secondary font-light">
-                Vias Resort Van Phong Peninsula honored with tripadvisor
-                Travelers
-              </h3>
-              <div>
-                <a
-                  href="#"
-                  class="b1-font link-hover color-secondary underline-first"
-                  >See more</a
-                >
+            <div class="swiper-slide">
+              <div class="news-detail-item">
+                <div class="news-item d-block">
+                  <a href="" class="news-img d-block">
+                    <img src="./assets/images/gallery-1.png" alt="" />
+                  </a>
+                  <div class="news-content">
+                    <h3 class="h5-font font-heading color-secondary font-light">
+                      Vias Resort Van Phong Peninsula honored with tripadvisor
+                      Travelers
+                    </h3>
+                    <div class="view">
+                      <a
+                        href="#"
+                        class="b1-font link-hover color-secondary underline-first"
+                        >See more</a
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="swiper-arrows d-none d-md-block">
+          <div class="swiper-btn swiper-button-prev">
+            <svg
+              width="10"
+              height="16"
+              viewBox="0 0 10 16"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M9.05 14.875C8.15752 12.495 5.12302 7.73504 0.125001 7.73504"
+                stroke="#543929"
+              />
+              <path
+                d="M9.04993 0.5954C8.15744 2.97538 5.12295 7.73535 0.125 7.73535"
+                stroke="#543929"
+              />
+            </svg>
+          </div>
+          <div class="swiper-btn swiper-button-next">
+            <svg
+              width="10"
+              height="16"
+              viewBox="0 0 10 16"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0.95 14.875C1.84248 12.495 4.87698 7.73504 9.875 7.73504"
+                stroke="#543929"
+              />
+              <path
+                d="M0.950074 0.5954C1.84256 2.97538 4.87705 7.73535 9.875 7.73535"
+                stroke="#543929"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="swiper-pagination d-block d-md-none"></div>
       </section>
       <div class="spacing-120"></div>
     </main>
@@ -583,7 +606,7 @@
                 <h4 class="title-social text-uppercase b3-font color-white">
                   Sign up to our newsletter
                 </h4>
-                <form action="">
+                <form action="" class="contact-form" id="contact-form">
                   <input type="email" placeholder="Email" />
                   <button type="submit">
                     <svg
@@ -945,7 +968,6 @@
     <script src="./assets/libs/bootstrap.bundle.min.js"></script>
     <script src="./assets/libs/imagesloaded.pkgd.min.js"></script>
     <script src="./assets/libs/swiper-bundle.min.js"></script>
-    <script src="./assets/libs/lightgallery.umd.min.js"></script>
     <!-- import custom js -->
     <script type="module" src="./assets/main/js/script.min.js"></script>
 
