--- a/news.html
+++ b/news.html
@@ -556,6 +556,11 @@
                 class="b3-font color-white text-uppercase mt-auto link-hover"
                 >About Van phong peninsula</a
               >
+              <a
+                href="#"
+                class="b3-font color-white text-uppercase mt-auto link-hover"
+                >experiences</a
+              >
             </div>
             <div class="footer-bottom__center col-lg-6">
               <div class="footer-info">
