--- a/news-detail.html
+++ b/news-detail.html
@@ -573,13 +573,7 @@
             <img src="./assets/images/logo-footer.svg" alt="" />
           </a>
           <div class="footer-bottom row g-0">
-            <div class="footer-bottom__left col-lg-3 d-none d-lg-block">
-              <a
-                href="#"
-                class="b3-font color-white text-uppercase mt-auto link-hover"
-                >About Van phong peninsula</a
-              >
-            </div>
+            <div class="footer-bottom__left col-lg-3 d-none d-lg-block"></div>
             <div class="footer-bottom__center col-lg-6">
               <div class="footer-info">
                 <p class="text-center">Van Phong Bay, Nha Trang, Khanh Hoa</p>
@@ -596,9 +590,6 @@
               </div>
               <div class="footer-download d-none d-lg-flex">
                 <a href="#" class="btn-download" download>DOWNLOAD BROCHURE</a>
-                <div class="copyright">
-                  © 2025 VIAS RESORT VAN PHONG PENINSULA
-                </div>
               </div>
             </div>
             <div class="footer-bottom__right col-lg-3">
@@ -747,12 +738,37 @@
               </div>
               <a
                 href="https://alphacreative.vn/"
-                class="footer-alpha link-hover"
+                class="footer-alpha link-hover d-none"
               >
                 Digital experience by Alphacreative
               </a>
             </div>
           </div>
+          <ul class="footer-terms d-flex align-items-center">
+            <li>
+              <a href="" class="b3-font color-white text-uppercase link-hover"
+                >Điều khoản</a
+              >
+            </li>
+            <li>
+              <a href="" class="b3-font color-white text-uppercase link-hover"
+                >Điều khoản</a
+              >
+            </li>
+            <li>
+              <a href="" class="b3-font color-white text-uppercase link-hover"
+                >Điều khoản</a
+              >
+            </li>
+            <li>
+              <a href="" class="b3-font color-white text-uppercase link-hover"
+                >Điều khoản</a
+              >
+            </li>
+            <li class="copyright b3-font color-white text-uppercase">
+              © 2025 VIAS RESORT VAN PHONG PENINSULA
+            </li>
+          </ul>
         </div>
         <div class="footer-pattern">
           <img
@@ -948,6 +964,31 @@
               </a>
             </div>
           </div>
+          <ul class="footer-social d-flex align-items-center">
+            <li>
+              <a href="" class="b3-font color-white text-uppercase link-hover"
+                >Điều khoản</a
+              >
+            </li>
+            <li>
+              <a href="" class="b3-font color-white text-uppercase link-hover"
+                >Điều khoản</a
+              >
+            </li>
+            <li>
+              <a href="" class="b3-font color-white text-uppercase link-hover"
+                >Điều khoản</a
+              >
+            </li>
+            <li>
+              <a href="" class="b3-font color-white text-uppercase link-hover"
+                >Điều khoản</a
+              >
+            </li>
+            <li class="copyright b3-font color-white text-uppercase">
+              © 2025 VIAS RESORT VAN PHONG PENINSULA
+            </li>
+          </ul>
         </div>
         <div class="footer-pattern">
           <img
